namespacing hide class to ui-header-hide to prevent conflict with commons css hide class

--- a/assets/less/backbone.ui.header.less
+++ b/assets/less/backbone.ui.header.less
@@ -23,7 +23,7 @@ header.detatch {
 	transition: transform .1s,background .1s,color .1s;
 }
 
-header.hide {
+header.ui-header-hide {
 	opacity: 0;
 	-webkit-transition: -webkit-transform .2s,background .3s,color .3s,opacity 0 .3s;
 	-moz-transition: -moz-transform .2s,background .3s,color .3s,opacity 0 .3s;
